tests/unit/Core/Errors/Directory.Build.props
<Project>

    <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />

    <PropertyGroup>
        <RootNamespace>Paraminter.CSharp.Attributes.Constructor.Phrike.Errors</RootNamespace>
    </PropertyGroup>
    
</Project>